First implementation of raytracer in torch. Currently a bit slow and too memory-demanding. Note: tests do not include the models (from C++ magritte)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,7 @@ Homepage = "https://github.com/Magritte-code/Magritte-torch"
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
 pythonpath = [".", "src"]
+
+[tool.setuptools.packages.find]
+include = ["magrittetorch*"]
+exclude = ["docs*", "tests*", "models*"]
