--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "numpy",
     "tqdm",
     "h5py",
+    "scipy",
+    "plotly",
+    "palettable"
 ]
 requires-python = ">=3.10"
 
