(increase version minor) fixed version update

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -58,7 +58,7 @@ jobs:
           file-path: version.txt
           commit-msg: "CI: increment version number to ${{env.NewVersion}}"
           github-token: ${{ secrets.GITHUB_TOKEN}}
-          branch: stable
+          branch: main
 
 
   InstallAndTest:
