--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -55,7 +55,9 @@ jobs:
       - name: Auto commit the version change
         uses: test-room-7/action-update-file@v1
         with:
-          file-path: version.txt
+          file-path: |
+            version.txt
+            pyproject.toml
           commit-msg: "CI: increment version number to ${{env.NewVersion}}"
           github-token: ${{ secrets.GITHUB_TOKEN}}
           branch: main
