(increase version minor) Added documentation.
Also extra improvements to NLTE computations, including memory management and bugfixes.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -103,6 +103,6 @@ jobs:
         run: pytest --verbose
         working-directory: tests/benchmarks/analytic
       # Numeric tests still TODO
-      # - name: run numeric tests
-      #   run: pytest --verbose
-      #   working-directory: tests/benchmarks/numeric
+      - name: run numeric tests
+        run: pytest --verbose
+        working-directory: tests/benchmarks/numeric
