--- a/.github/workflows/build-and-test-on-pr.yml
+++ b/.github/workflows/build-and-test-on-pr.yml
@@ -50,6 +50,6 @@ jobs:
         run: pytest --verbose
         working-directory: tests/benchmarks/analytic
       # Numeric tests still TODO
-      # - name: run numeric tests
-      #   run: pytest --verbose
-      #   working-directory: tests/benchmarks/numeric
+      - name: run numeric tests
+        run: pytest --verbose
+        working-directory: tests/benchmarks/numeric
