--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,13 @@ dependencies = [
     "yt",   # visualization
     "ipykernel", # for jupyter notebooks
     "healpy", #angular discretization
+    "jupyter", # for jupyter notebooks
 ]
 requires-python = ">=3.10"
 
 [project.optional-dependencies]
 dev = ["black", "pip-tools", "pytest"]
-docs = ["sphinx", "breathe", "sphinx_copybutton", "nbsphinx", "sphinx_rtd_theme", "pandoc"]
+docs = ["sphinx", "breathe", "sphinx_copybutton", "nbsphinx", "sphinx_rtd_theme", "pandoc", "enum-tools[sphinx]"]
 
 [project.urls]
 Homepage = "https://github.com/Magritte-code/Magritte-torch"
