Removed psutil dependency Also removed any torch.compile stuff, as it seem to have trouble with changing dimensions. (should have been committed on the main branch quite some time ago, so i do not remember which bugs have been fixed)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.json
-*.ini
+# *.ini
 SOURCES.txt
 requires.txt
 build/
@@ -11,3 +11,6 @@ tests/results/*
 *.hdf5
 docs/src/doxygen/*
 *.npy
+*.png
+PKG-INFO
+*.egg-info
